# Slug

./: Cargo.toml  LICENSE  LICENSE-MIT  NOTICE  README orig.md  README.md  SlugPixelShader.hlsl  SlugVertexShader.hlsl
slug/: Cargo.toml
slug-demo/: Cargo.toml
slug-demo/src/: main.rs
slug/src/: debug.rs  layout.rs  lib.rs  renderer.rs  vertex.rs
slug/src/font/: bands.rs  curves.rs  detect.rs  loader.rs  mod.rs
slug/src/shaders/: vertex.wgsl
src/: glyph_cache.rs  layout.rs  lib.rs  main.rs  renderer.rs
src/font/: bands.rs
src/shaders/: pixel.wgsl
wgpu-font-renderer-demo/: Cargo.toml
wgpu-font-renderer-demo/src/: main.rs
